--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,11 +5,20 @@ Try changing the color from blue to red in the
 primary color variable below.
 */
 
+.show {
+	color: blue;
+}
+
+.hide {
+	display: none;
+}
+
+/*
 :root {
 	--color-primary: blue;
 	--color-secondary: #c00;
 }
-
+*/
 /*
 CSS doesn't allow variables to be used in media
 queries just yet, but you can use these values
@@ -21,15 +30,18 @@ to help you out.
 	--size-lg: 1024px;
 	--size-xl: 1200px;
 */
-
+/*
 h1 {
 	color: var(--color-primary);
 }
+*/
 
 /* This uses the same value as --size-xs. */
+/*
 @media screen and (width >= 320px) {
 	.content-container {
 		margin: 0 auto;
 		max-width: 768px;
 	}
 }
+*/
